# plateau-bridge

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  RELEASING.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  city.yml  feature.yml
.github/workflows/: ci.yml  release.yml
distribution/: index.json
docs/: ADDING_A_CITY.md  COVERAGE_ROADMAP.md  DATA.md  DISTRIBUTION.md  HONESTY.md  PERFORMANCE.md  SEQUENCE.md  architecture.md  coverage_sources.research-preview.json
examples/: 01_query_filter.py  02_five_queries.ipynb  verify_all.sh
examples/browser_cesium/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/browser_cesium/src/: cities.ts  main.ts
examples/browser_colorby/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/browser_colorby/public/: data
examples/browser_colorby/src/: main.ts
examples/browser_deckgl/: README.md  index.html  loaders-gl-patch.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/browser_deckgl/src/: main.ts
scripts/: refresh_cities_ts.py  test_browser.mjs
src/plateau_bridge/: __init__.py  admin.py  attribution.py  bench.py  cache.py  catalog.py  cli.py  config.py  diff.py  distribution.py  manifest.py  poster.py  schema.py  verify.py
src/plateau_bridge/ops/: __init__.py  attributes.py  building_complex.py  geometric_height.py  intersect.py  pmtiles.py  style_table.py  tiles3d.py  uid.py
src/plateau_bridge/pipeline/: __init__.py  gate_a.py  gate_b.py  gate_c.py  hazard_only.py
src/plateau_bridge/sources/: citygml.py  coverage.py  coverage_ksj.py  download.py  hazard.py  metadata_xml.py  zoning.py
src/plateau_parquet/: __init__.py  admin.py  attribution.py  cache.py  catalog.py  catalog_registry.json  cli.py  config.py  diff.py  distribution.py  manifest.py  poster.py  schema.py  verify.py
src/plateau_parquet/data/: coverage_sources.json
src/plateau_parquet/ops/: attributes.py  flatgeobuf.py  geometric_height.py  intersect.py  tiles3d.py
src/plateau_parquet/pipeline/: __init__.py  gate_a.py  gate_b.py  gate_c.py  (+1 more)
tests/: test_admin.py  test_attributes_real_keys.py  test_bench.py  test_building_complex.py  test_centroid_mode.py  test_citygml_marker_scan.py  test_coverage_ksj.py  test_coverage_semantics.py  test_diff.py  test_gate_a_sampling.py  test_gate_handoff.py  test_geometric_height.py  test_hazard_rank.py  test_hazard_subcommand.py  test_integration_gate_a.py  test_intersect_landslide.py  test_metadata_xml.py  test_prune_cache.py  test_resolve_city.py  test_schema.py  test_style_table.py  test_tile_placements.py  test_tileset_walk.py  test_uid.py  test_uro_sanitise.py  test_verify.py
(+6 files in other folders)
