[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "plateau-parquet"
version = "0.1.0"
description = "A trustworthy building index + hazard intersection pipeline for Project PLATEAU."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Yodo Labs", email = "pan@yodolabs.jp" }]
maintainers = [{ name = "Yodo Labs", email = "pan@yodolabs.jp" }]
keywords = ["plateau", "citygml", "geospatial", "3dtiles", "japan", "hazard", "geoparquet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "pydantic>=2.6",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
pmtiles = ["pmtiles>=3.2"]
tiles3d = ["pygltflib>=1.16"]
poster = ["matplotlib>=3.8"]
all = ["pmtiles>=3.2", "pygltflib>=1.16", "matplotlib>=3.8"]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
plateau = "plateau_parquet.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/plateau_parquet"]

[tool.hatch.build.targets.wheel.force-include]
"src/plateau_parquet/catalog_registry.json" = "plateau_parquet/catalog_registry.json"
"src/plateau_parquet/data/japan_admin.geojson" = "plateau_parquet/data/japan_admin.geojson"

[project.urls]
Homepage = "https://github.com/pixelx-jp/plateau-parquet"
Documentation = "https://github.com/pixelx-jp/plateau-parquet#readme"
Issues = "https://github.com/pixelx-jp/plateau-parquet/issues"
Organization = "https://yodolabs.jp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# Typer's idiomatic API requires `typer.Option(...)` / `typer.Argument(...)`
# in function-default position; ruff's B008 flags this as a footgun but
# it's the only supported way to declare CLI parameters in Typer.
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
reportMissingImports = "warning"
reportMissingTypeStubs = false
# geopandas / pyarrow stubs are incomplete upstream; their typing issues
# would dominate the report otherwise.
reportArgumentType = "none"
reportReturnType = "none"
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "warning"
